# Twenty4Seven-Gym

./: .clinerules  .dockerignore  .env.example  .gitignore  AGENTS.md  Dockerfile  README.md  app_complete.js  app_final.js  cleanup_nuki.py  config.py  docker-compose.yml  enums.py  exceptions.py  firebender.json  logging_setup.py  models.py  nuki_client.py  oauth.py  patch_app.py  patch_app_v2.py  patch_local_app.py  patch_public_checks.py  patch_services.py  pyproject.toml  security.py  setup_webhook.py  split_settings.py  storage.py  test_prod_code.py  update_template_final.py  webhook_service.py
.agents/skills/feature-dev/: SKILL.md
.superpowers/brainstorm/3257500-1774037823/: .events  .server-stopped  .server.pid  phase1-approaches.html  phase1-overview.html
docs/superpowers/specs/: 2026-03-20-fitness-studio-access-design.md  2026-03-20-fitness-studio-access-implementation-plan.md
src/nuki_integration/: __init__.py  app.py  auth.py  config.py  datetime_utils.py  db.py  dependencies.py  enums.py  exceptions.py  logging_setup.py  magicline.py  models.py  notifications.py  nuki_client.py  oauth.py  services.py  setup_webhook.py  worker.py
src/nuki_integration/services/: __init__.py  access.py  alerts.py  auth_tokens.py  checkin.py  checks.py  email_builder.py  email_templates.py  formatting.py  funnels.py  house_rules.py  media.py  members.py  password.py  qr.py  settings.py  sync.py
src/nuki_integration/static/: admin.css  app.js  index.html
src/nuki_integration/static/assets/: admin.css  app.js
tests/: test_check_in_services.py
