[build-system]
requires = ["setuptools>=69.0"]
build-backend = "setuptools.build_meta"

[project]
name = "nuki-integration"
version = "2.0.0"
description = "Fitness studio access platform with Magicline, Nuki, Postgres, and admin API"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0,<1.0.0",
    "uvicorn[standard]>=0.30.0,<1.0.0",
    "httpx>=0.27.0,<1.0.0",
    "pydantic>=2.8.0,<3.0.0",
    "pydantic-settings>=2.4.0,<3.0.0",
    "email-validator>=2.2.0,<3.0.0",
    "psycopg[binary]>=3.2.0,<4.0.0",
    "psycopg-pool>=3.2.0,<4.0.0",
    "qrcode>=7.4,<9.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=5.0.0",
    "httpx",
    "ruff>=0.5.0",
    "mypy>=1.10.0",
]

[project.scripts]
nuki-setup-webhook = "nuki_integration.setup_webhook:main"
studio-access-worker = "nuki_integration.worker:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
nuki_integration = ["static/*"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "S", "B", "A", "C4", "SIM", "TCH"]
ignore = ["B008", "S104", "TC001", "TC003"]  # FastAPI Depends and local type imports are intentional

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true

[tool.pytest.ini_options]
pythonpath = ["src"]
asyncio_mode = "auto"
